insert data to db from calling post api
