# docs/swagger.json
@@ -14,7 +14,7 @@
         },
         "version": "1.0"
     },
-    "host": "127.0.0.1:3005",
+    "host": "127.0.0.1:3005/api/v1",
     "basePath": "/",
     "paths": {
         "/accounts/{id}": {
@@ -41,33 +41,61 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Account"
+                            "$ref": "#/definitions/handlers.Account"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.HTTPError"
+                            "$ref": "#/definitions/handlers.HTTPError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/main.HTTPError"
+                            "$ref": "#/definitions/handlers.HTTPError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.HTTPError"
+                            "$ref": "#/definitions/handlers.HTTPError"
                         }
+                    }
+                }
+            }
+        },
+        "/user/create": {
+            "post": {
+                "description": "create a account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "create a account",
+                "parameters": [
+                    {
+                        "description": "User",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/serializers.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
                     }
                 }
             }
         }
     },
     "definitions": {
-        "main.Account": {
+        "handlers.Account": {
             "type": "object",
             "properties": {
                 "id": {
@@ -75,8 +103,30 @@
                 }
             }
         },
-        "main.HTTPError": {
+        "handlers.HTTPError": {
             "type": "object"
+        },
+        "serializers.User": {
+            "type": "object",
+            "required": [
+                "email",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 4
+                },
+                "username": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 1
+                }
+            }
         }
     }
 }
