# serializers/register.serializers.go
@@ -1,7 +1,7 @@
 package serializers
 
-type RegisterRequest struct {
-	Usernmae string `json:"username" form:"username" binding:"required,min=1,max=20"`
-	Email    string `json:"email" form:"email" binding:"required,email"`
+type User struct {
+	Username string `json:"username" form:"username" binding:"required,min=1,max=20"`
 	Password string `json:"password" form:"password" binding:"required,min=4"`
+	Email    string `json:"email" form:"email" binding:"required,email"`
 }
